# readme.ai

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py  router.py
apps/api/app/api/routes/: __init__.py  system.py
apps/api/app/core/: __init__.py  config.py  errors.py  lifespan.py  logging.py  middleware.py
apps/api/app/core/storage/: __init__.py  base.py  local.py  provider.py
apps/api/app/db/: __init__.py  base.py  session.py
apps/api/app/modules/: __init__.py
apps/api/app/modules/auth/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py  verifier.py
apps/api/app/modules/explanation/: __init__.py  classifier.py  context_extractor.py  dependencies.py  enums.py  provider.py  router.py  schemas.py  service.py
apps/api/app/modules/learning/: __init__.py  capability.py  dependencies.py  engine.py  registry.py
apps/api/app/modules/processing/: __init__.py  dependencies.py  document.py  enums.py  models.py  registry.py  repository.py  router.py  schemas.py  service.py  trigger.py
apps/api/app/modules/processing/processors/: pdf.py  (+3 more)
apps/api/app/modules/reader/: __init__.py  content.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/prompts/: __init__.py  paragraph_explanation.py  sentence_explanation.py  word_explanation.py
apps/api/app/schemas/: __init__.py  system.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_create_users_table.py  0002_create_books_table.py  0003_create_reader_tables.py  0004_create_processing_tables.py
apps/api/tests/: conftest.py  test_auth.py  test_dev_auth.py  test_explanation.py  test_learning.py  test_library.py  test_processing_api.py  test_processing_unit.py  test_reader.py  test_storage.py  test_system.py
(+99 files in other folders)
