[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readme-ai-api"
version = "0.2.0"
description = "ReadMe.ai backend — synchronous orchestration layer (engineering foundation)."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy[asyncio]>=2.0.36,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.14,<2.0",
    "pyjwt[crypto]>=2.9,<3.0",
    "httpx>=0.27,<1.0",
    "python-multipart>=0.0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.4",
    "black>=24.10.0",
    "isort>=5.13.2",
    "mypy>=1.13.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
# Import sorting (I) is delegated to isort, the dedicated tool, to avoid two
# formatters fighting over import layout.
select = ["E", "F", "B", "UP", "N", "C4", "SIM", "RUF"]
ignore = ["B008"]  # FastAPI uses callables in defaults (Depends)

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
exclude = ["migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
